# module-local-dashboard

./: .gitignore  AGENTS.md  Cargo.toml  eslint.config.js  opencode.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.omo/run-continuation/: ses_0fc7053d1ffeilGUeAkTWJhgoA.json  ses_0fc744a46ffeUqHSQ1vmoVZd10.json  ses_0fc8f3664ffeacuzw0BFljOIPH.json  ses_100e9bd85ffeBcfvZqGc2CPOAg.json
docs/acc-coach/public-protocol/: chart-default-value-prefill.md  chart-default-value.md
docs/module_local_dashboard/audit/: 2026-06-28-initial-deep-audit.md
src/: lib.rs
src-ui/features/local-dashboard-overlay/: LocalDashboardOverlay.module.css  LocalDashboardOverlay.tsx  OverlayRegionEditor.tsx  OverlayRegionPreview.tsx  dashboardRenderer.test.ts  dashboardRenderer.tsx  index.ts  overlayConfigApi.ts  telemetryFormat.ts  textExpression.test.ts  textExpression.ts  types.ts  useDashboardFrame.ts  useDashboardMetadata.ts
src/local_dashboard_overlay/: acc_window.rs  commands.rs  config.rs  frame_bus.rs  mod.rs  window.rs
