[package]
name = "acc-coach-local-dashboard-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "acc_coach_local_dashboard_overlay"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.1" }
module_dashboard_protocol = { path = "../module_dashboard_protocol" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }
